kubernetes-network-policy/network-public.yml
#allow only external access to Jupyter (disallow access from any other pods)
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-jupyter
spec:
  podSelector:
    matchLabels:
      group: bob-public
  ingress:
  - ports:
    - port: 8888
  - from:
    - podSelector:
        matchExpressions:
              - {key: group, operator: DoesNotExist, values: []}
