kubernetes-network-policy/network.yml
#only allow access to bob and bob-public pods
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-internal
spec:
  podSelector:
    matchLabels:
      group: bob
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - {key: group, operator: In, values: [bob,bob-public]}
